tests/sema/fail/v10_fail_i64_literal_range.ep
# COMPILE_FAIL: integer literal 9223372036854775808 out of range for i64

fun main(): i64 {
    ret 9223372036854775808
}
